Yay, Sublime Text settings!

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Sublime Text 3 Files
 
-Package Control.merged-ca-bundle
-Package Control.system-ca-bundle
-PackageControl.cache/*
+SublimeText/User/Package Control.merged-ca-bundle
+SublimeText/User/Package Control.system-ca-bundle
+SublimeText/User/PackageControl.cache/*
+SublimeText/User/Package Control.last-run
